force-app/main/default/objects/WorkOrder/fields/FSM_TaskType__c.field-meta.xml
<CustomField>
    <fullName>FSM_TaskType__c</fullName>
    <description>Updated as part of SFI-1136</description>
    <label>Task Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>