force-app/main/default/objects/WorkOrder/fields/FSM_TechnicalSpecification__c.field-meta.xml
<CustomField>
    <fullName>FSM_TechnicalSpecification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFI-1285</description>
    <label>Technical Specification</label>
    <referenceTo>FSM_TechnicalSpecification__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>