force-app/main/default/objects/WorkOrder/fields/FSM_TMAActualEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>FSM_TMAActualEndDateTime__c</fullName>
    <description>Created as a part of SFS-2980</description>
    <formula>FSM_TMAPermit__r.FSM_TMAActualEnd__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMA Actual End Time</label>
    <type>DateTime</type>
</CustomField>