force-app/main/default/objects/WorkOrder/fields/FSM_TMAActualStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>FSM_TMAActualStartDateTime__c</fullName>
    <description>Created as a part of SFS-2980</description>
    <formula>FSM_TMAPermit__r.FSM_TMAActualStart__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMA Actual Start Time</label>
    <type>DateTime</type>
</CustomField>