force-app/main/default/objects/WorkOrder/fields/FSM_TMAApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>FSM_TMAApprovalStatus__c</fullName>
    <formula>TEXT(FSM_TMAPermit__r.FSM_TMAApprovalStatus__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMA Approval Status</label>
    <type>Text</type>
</CustomField>