force-app/main/default/objects/WorkOrder/fields/FSM_TMAPermit__c.field-meta.xml
<CustomField>
    <fullName>FSM_TMAPermit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TMA Permit</label>
    <referenceTo>FSM_TMAPermit__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>