force-app/main/default/objects/WorkOrder/fields/FSM_TMARemainingDays__c.field-meta.xml
<CustomField>
    <fullName>FSM_TMARemainingDays__c</fullName>
    <description>SFS-2980</description>
    <formula>IF(
    OR(
        ISPICKVAL(FSM_TMAPermit__r.FSM_NoticeType__c, &apos;01&apos;),
        ISPICKVAL(FSM_TMAPermit__r.FSM_NoticeType__c, &apos;02&apos;),
        ISPICKVAL(FSM_TMAPermit__r.FSM_NoticeType__c, &apos;03&apos;)
    ),
    IF(
        (FSM_TMAPermit__r.FSM_PermitEndDate__c - NOW()) &gt; 0,
        TEXT(FLOOR(FSM_TMAPermit__r.FSM_PermitEndDate__c - NOW())) &amp; &quot; Days &quot; &amp;
        TEXT(FLOOR(MOD(FSM_TMAPermit__r.FSM_PermitEndDate__c - NOW(), 1) * 24)) &amp; &quot; Hours&quot;,
        TEXT(0)
    ),
    TEXT(0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMA Remaining Days</label>
    <type>Text</type>
</CustomField>