force-app/main/default/objects/WorkOrder/fields/FSM_TypeofLeakValue__c.field-meta.xml
<CustomField>
    <fullName>FSM_TypeofLeakValue__c</fullName>
    <label>Type of Leak Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No leak</fullName>
            </value>
            <value>
                <fullName>Non urgent weeping visible leak</fullName>
            </value>
            <value>
                <fullName>Network non visible leak</fullName>
            </value>
            <value>
                <fullName>Private non visible leak</fullName>
            </value>
            <value>
                <fullName>Water Quality Issue non-visible leak</fullName>
            </value>
            <value>
                <fullName>Dangerous apparatus (site made safe)</fullName>
            </value>
            <value>
                <fullName>Non-visible leak losing &lt;17L per minute / 1m3/hr</fullName>
            </value>
            <value>
                <fullName>Flow Alarm non-visible leak</fullName>
            </value>
            <value>
                <fullName>Poor supply non-visible leak</fullName>
            </value>
            <value>
                <fullName>Non-visible leak losing &gt;17L per minute / 1m3/hr</fullName>
            </value>
            <value>
                <fullName>Dangerous apparatus (site unsafe)</fullName>
            </value>
            <value>
                <fullName>Poor supply visible leak</fullName>
            </value>
            <value>
                <fullName>Network visible leak</fullName>
            </value>
            <value>
                <fullName>Non-visible leak losing &gt;85L per minute / 5m3/hr</fullName>
            </value>
            <value>
                <fullName>No supply visible leak</fullName>
            </value>
            <value>
                <fullName>No supply non-visible leak</fullName>
            </value>
            <value>
                <fullName>Flow Alarm visible leak</fullName>
            </value>
            <value>
                <fullName>Urgent visible leak</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>