force-app/main/default/objects/WorkOrder/fields/FSM_TypeofWork__c.field-meta.xml
<CustomField>
    <fullName>FSM_TypeofWork__c</fullName>
    <description>SFS-63, To differentiate between customer driven and asset driven work.</description>
    <label>Type of Work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>