force-app/main/default/objects/WorkOrder/fields/FSM_Virtual__c.field-meta.xml
<CustomField>
    <fullName>FSM_Virtual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Virtual</label>
    <type>Checkbox</type>
</CustomField>