force-app/main/default/objects/WorkOrder/fields/FSM_WarningState__c.field-meta.xml
<CustomField>
    <fullName>FSM_WarningState__c</fullName>
    <description>Updated as part of SFI-1136</description>
    <label>Warning State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>