force-app/main/default/objects/WorkOrder/fields/FSM_WorkAsset__c.field-meta.xml
<CustomField>
    <fullName>FSM_WorkAsset__c</fullName>
    <label>Work Asset</label>
    <length>255</length>
    <type>Text</type>
</CustomField>