force-app/main/default/objects/WorkOrder/fields/FSM_WorkTypeCode__c.field-meta.xml
<CustomField>
    <fullName>FSM_WorkTypeCode__c</fullName>
    <label>Work Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>