force-app/main/default/objects/WorkOrder/fields/Notification_Short_Text__c.field-meta.xml
<CustomField>
    <fullName>Notification_Short_Text__c</fullName>
    <formula>Case.Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notification Short Text</label>
    <type>Text</type>
</CustomField>