force-app/main/default/objects/WorkOrder/recordTypes/FSM_BioResource.recordType-meta.xml
<RecordType>
    <fullName>FSM_BioResource</fullName>
    <active>true</active>
    <label>Bio Resource</label>
</RecordType>