force-app/main/default/objects/WorkOrder/recordTypes/FSM_DeveloperServices.recordType-meta.xml
<RecordType>
    <fullName>FSM_DeveloperServices</fullName>
    <active>true</active>
    <label>Developer Services</label>
</RecordType>