force-app/main/default/objects/WorkOrder/recordTypes/FSM_Metering.recordType-meta.xml
<RecordType>
    <fullName>FSM_Metering</fullName>
    <active>true</active>
    <label>Metering</label>
</RecordType>