force-app/main/default/objects/WorkOrder/recordTypes/FSM_Virtual.recordType-meta.xml
<RecordType>
    <fullName>FSM_Virtual</fullName>
    <active>true</active>
    <label>Virtual DST</label>
</RecordType>