force-app/main/default/objects/WorkOrder/recordTypes/FSM_WasteInfra.recordType-meta.xml
<RecordType>
    <fullName>FSM_WasteInfra</fullName>
    <active>true</active>
    <label>Waste Infra</label>
</RecordType>