force-app/main/default/objects/WorkOrder/recordTypes/FSM_WasteNonInfra.recordType-meta.xml
<RecordType>
    <fullName>FSM_WasteNonInfra</fullName>
    <active>true</active>
    <label>Waste Non Infra</label>
</RecordType>