force-app/main/default/objects/WorkOrder/recordTypes/FSM_WaterInfra.recordType-meta.xml
<RecordType>
    <fullName>FSM_WaterInfra</fullName>
    <active>true</active>
    <label>Water Infra</label>
</RecordType>