force-app/main/default/objects/WorkOrder/recordTypes/FSM_WaterNonInfra.recordType-meta.xml
<RecordType>
    <fullName>FSM_WaterNonInfra</fullName>
    <active>true</active>
    <label>Water Non Infra</label>
</RecordType>