force-app/main/default/objects/WorkOrder/validationRules/FSM_Business_Unit_as_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>FSM_Business_Unit_as_Mandatory</fullName>
    <active>true</active>
    <description>SFS-7957</description>
    <errorConditionFormula>AND(
    ISBLANK(TEXT(FSM_BusinessUnit__c)), 
    NOT(ISBLANK(FSM_ExternalId__c))
)</errorConditionFormula>
    <errorMessage>You need to provide a Business Unit.</errorMessage>
</ValidationRule>