force-app/main/default/objects/WorkOrder/validationRules/FSM_CheckForOpenMeasuringPoints.validationRule-meta.xml
<ValidationRule>
    <fullName>FSM_CheckForOpenMeasuringPoints</fullName>
    <active>true</active>
    <description>A work order can not be updated as completed with open measuring points.
SFS-4065</description>
    <errorConditionFormula>FSM_OpenMesuringPointsCount__c &gt; 0 &amp;&amp;  $Permission.FSM_MeasuringPointValdiation &amp;&amp; ISPICKVAL( Status , &apos;Completed&apos;)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Please action all measuring points.</errorMessage>
</ValidationRule>