force-app/main/default/objects/WorkOrder/validationRules/FSM_RestrictStatusComplete.validationRule-meta.xml
<ValidationRule>
    <fullName>FSM_RestrictStatusComplete</fullName>
    <active>true</active>
    <description>Preventing the status update to &apos;Completed&apos; if any of Mandatory Worksteps are not completed.Created as a part of SFS-1298.</description>
    <errorConditionFormula>AND(FSM_RestrictStatusUpdate__c,NOT($Permission.FSM_ExcludeWorkStepCompletion), NOT(ISPICKVAL( PRIORVALUE ( Status ), &quot;Completed&quot;) ) ,ISPICKVAL( Status , &quot;Completed&quot;) )</errorConditionFormula>
    <errorMessage>Status cannot be changed to Completed until outstanding Mandatory Data Capture Forms are completed.</errorMessage>
</ValidationRule>