force-app/main/default/objects/WorkOrder/validationRules/Priority_should_be_1_to_10.validationRule-meta.xml
<ValidationRule>
    <fullName>Priority_should_be_1_to_10</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(OR(ISPICKVAL(Priority, &apos;&apos;),ISPICKVAL(Priority, &apos;1&apos;),ISPICKVAL(Priority, &apos;2&apos;),ISPICKVAL(Priority, &apos;3&apos;),ISPICKVAL(Priority, &apos;4&apos;),ISPICKVAL(Priority, &apos;5&apos;),ISPICKVAL(Priority, &apos;6&apos;),ISPICKVAL(Priority, &apos;7&apos;),ISPICKVAL(Priority, &apos;8&apos;),ISPICKVAL(Priority, &apos;9&apos;),ISPICKVAL(Priority, &apos;10&apos;)))</errorConditionFormula>
    <errorDisplayField>Priority</errorDisplayField>
    <errorMessage>Priority value should be in range of 1 to 10.</errorMessage>
</ValidationRule>